# FFmpeg

./: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.h  main.cpp
Core/: DMedia.h  EMedia.h  Logger.h  MediaStreamInfo.h  Memory.h
Core/KSDS/: BlockingQueue.h
Core/KSIO/: IKSStream.h
MediaLib/: CMakeLists.txt  MediaMain.cpp  MediaMain.h  revise
MediaLib/Codec/CMedia/: KSFrame.h  KSImage.h  Readme.md
MediaLib/Codec/KSImage/: KSImageLoader.h
MediaLib/Codec/KSImage/ImageCodec/: STBImageLoader.cpp
MediaLib/Codec/libffmpeg/: CMakeLists.txt  Notes
MediaLib/Codec/libffmpeg/Codec/: FFMpegAudioDecoder.cpp  FFMpegAudioDecoder.h  FFMpegDecoder.cpp  FFMpegDecoder.h  FFMpegVideoDecoder.cpp  FFMpegVideoDecoder.h  IDecoder.h  KSCodec.cpp  KSCodec.h
MediaLib/Codec/libffmpeg/FFUtils/: FFFrameUtils.cpp  FFFrameUtils.h  FFMpegFileUtils.cpp  FFMpegFileUtils.h  FFMpegLogUtils.cpp  FFMpegLogUtils.h  FFMpegUtils.cpp  FFMpegUtils.h
